--- a/Read It/app/src/main/res/values-night/themes.xml
+++ b/Read It/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ReadIt" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ReadIt" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryVariant">@color/primary_dark</item>
@@ -14,7 +14,7 @@
         <!-- Customize your theme here. -->
         <item name="android:navigationBarColor">@color/primary_dark</item>
     </style>
-    <style name="NoActionBar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="NoActionBar" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryVariant">@color/primary_dark</item>
