--- a/Read It/app/src/main/res/layout/activity_main.xml
+++ b/Read It/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@color/primary">
+    android:background="@color/primary"
+    tools:context=".MainActivity">
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_centerInParent="true"
         android:gravity="center"
-        android:layout_centerInParent="true">
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
+
         <ImageView
             android:id="@+id/splash_screen_company_logo"
             android:layout_width="200dp"
             android:layout_height="160dp"
-            android:src="@drawable/companylogo"/>
+            android:contentDescription="@string/company_logo"
+            android:src="@drawable/companylogo" />
 
         <TextView
             android:id="@+id/splash_screen_app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/aladin"
-            android:text="Read It"
+            android:text="@string/read_it"
             android:textColor="@color/primary_text"
             android:textSize="50sp" />
 
@@ -32,14 +35,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/aclonica"
-            android:text="Oskar K. Shrestha"
+            android:text="@string/oskar_k_shrestha"
             android:textColor="@color/primary_text"
             android:textSize="18sp" />
     </LinearLayout>
-
-
-
-
 
 
 </RelativeLayout>
